--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>css background image</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link href="">
     </head>
     <body>
 
