--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>css background image</title>
         <link rel="stylesheet" href="css/styles.css">
-        <link href="">
+        <link href="images">
     </head>
     <body>
 
